--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             const generatedImage = document.getElementById('generated-image');
 
             let originalPrompts = { detailed: { en: '', id: '' }, short: { en: '', id: '' } };
-            const apiKey = "";
+            const apiKey =" AIzaSyBEoFZw9j3Xvti1ZoHqfwqSvG1LZRskjxk";
             const textApiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
             const imageApiUrl = `https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate-002:predict?key=${apiKey}`;
 
